--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.20</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.31.1</version>
         </dependency>
     </dependencies>
 
